force-app/main/default/objects/User_Subscription__c/User_Subscription__c.object-meta.xml
<CustomObject>
    <label>User Subscription</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Subscriptions</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>