force-app/main/default/objects/User_Subscription__c/fields/Streaming_Service__c.field-meta.xml
<CustomField>
    <fullName>Streaming_Service__c</fullName>
    <label>Streaming Service</label>
    <referenceTo>Streaming_Service__c</referenceTo>
    <relationshipLabel>User Subscriptions</relationshipLabel>
    <relationshipName>User_Subscriptions</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <type>Lookup</type>
</CustomField>